# embeddedSW_TermProject

Backend/: main.py
Backend/access/: login.py  registerEquipment.py  sensorControl.py
Backend/api/: schedule.py  weatherApi.py
Backend/database/: dbconn.py  dbquery.py  firebase.py
Backend/function/: inform.py  role.py
Backend/signup/: signup.py
Mobile/RemoteWindowController/app/src/main/: AndroidManifest.xml
Mobile/RemoteWindowController/app/src/main/res/layout/: activity_main.xml  activity_sensor_control.xml  activity_sign_in.xml  activity_sign_up.xml  activity_user_login.xml
Mobile/RemoteWindowController/app/src/main/res/values/: strings.xml  themes.xml
Mobile/RemoteWindowController/app/src/main/res/values-night/: themes.xml
Mobile/WindowController/app/src/main/: AndroidManifest.xml
Mobile/WindowController/app/src/main/cpp/: CMakeLists.txt  includes.h  native-lib.cpp  setBuzzer.cpp  setBuzzer.h  setDotMatrix.cpp  setDotMatrix.h  setFnd.cpp  setFnd.h  setStepMotor.cpp  setStepMotor.h  setTextLcd.cpp  setTextLcd.h
Mobile/WindowController/app/src/main/res/layout/: activity_choose_login.xml  activity_device_login.xml  activity_device_page.xml  activity_equipment_registration.xml  activity_sensor_control.xml  activity_sign_up.xml  activity_user_login.xml
Mobile/WindowController/app/src/main/res/values-night/: themes.xml
WeatherUpdate/: main.py
WeatherUpdate/access/: SyncWeather.py  schedule.py
WeatherUpdate/api/: weatherApi.py  weatherInform.py
WeatherUpdate/firebase/: firebase.py
보고서/: 7팀_임베디드응용SW_기말텀프로젝트_최종.pptx
(+31 files in other folders)
